syntax = "proto3";

service PersonService {
  rpc GetPerson (PersonRequest) returns (PersonResponse);
}

message PersonRequest {
  string id = 1;
}

message PersonResponse {
  string first_name = 1;
  string last_name = 2;
}